--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edusafety-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "EduSafety (API)",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,10 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sinugrepo/edusafety-api.git"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
